Allow user to add game with score and display ordered

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,4 +1,8 @@
 {
     "appTitle": "Lumberjack",
-    "helloWorld": "Hello world!"
+    "cancel": "Cancel",
+    "name": "Name",
+    "save": "Save",
+    "score": "Score",
+    "timeToComplete": "Time to complete"
 }
