--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -1,4 +1,8 @@
 {
     "appTitle": "Lumberjack",
-    "helloWorld": "Olá, mundo!"
+    "cancel": "Cancelar",
+    "name": "Nome",
+    "save": "Salvar",
+    "score": "Pontuação",
+    "timeToComplete": "Tempo para completar"
 }
