Validation on fields and preparation for unit testing

--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -1,9 +1,12 @@
 {
     "appTitle": "Lumberjack",
     "cancel": "Cancelar",
+    "invalidScoreErrorMessage": "Deve ser um número entre 0 e 10",
+    "invalidTimeToCompleteErrorMessage": "Deve ser um número positivo",
     "loading": "Carregando...",
     "loadingIconDescription": "Ícone de carregamento exibindo um personagem do jogo Space Invaders",
     "name": "Nome",
+    "required": "Obrigatório",
     "save": "Salvar",
     "score": "Pontuação",
     "timeToComplete": "Tempo para completar"
