--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,9 +1,12 @@
 {
     "appTitle": "Lumberjack",
     "cancel": "Cancel",
+    "invalidScoreErrorMessage": "Must be between 0 and 10",
+    "invalidTimeToCompleteErrorMessage": "Must be a positive number",
     "loading": "Loading...",
     "loadingIconDescription": "Loading icon depicting a character from the game space invaders",
     "name": "Name",
+    "required": "Required",
     "save": "Save",
     "score": "Score",
     "timeToComplete": "Time to complete"
